SERVER-58669 Allow collMod, createIndexes, and dropIndexes once resharding coordinator has made a decision

(cherry picked from commit a1e57d2985b672c898431b7787e53c547bbd2753)

SERVER-58917 Wait until donors/recipients are aware that coordinator has persisted decision before expecting successful collMod, createIndexes, and dropIndexes in resharding_prohibited_commands.js

(cherry picked from commit 8179692b362d8237f201719946eb46bac6a5e961)