src/mongo/db/s/collection_metadata.cpp
@@ -95,11 +95,15 @@ boost::optional<ShardKeyPattern> CollectionMetadata::getReshardingKeyIfShouldFor
 }
 
 void CollectionMetadata::throwIfReshardingInProgress(NamespaceString const& nss) const {
-    if (isSharded() && getReshardingFields()) {
-        LOGV2(5277122, "reshardCollection in progress", "namespace"_attr = nss.toString());
+    if (isSharded()) {
+        const auto& reshardingFields = getReshardingFields();
+        // Throw if the coordinator is not in states "aborting", "committing", or "done".
+        if (reshardingFields && reshardingFields->getState() < CoordinatorStateEnum::kAborting) {
+            LOGV2(5277122, "reshardCollection in progress", "namespace"_attr = nss.toString());
 
-        uasserted(ErrorCodes::ReshardCollectionInProgress,
-                  "reshardCollection is in progress for namespace " + nss.toString());
+            uasserted(ErrorCodes::ReshardCollectionInProgress,
+                      "reshardCollection is in progress for namespace " + nss.toString());
+        }
     }
 }
 
